--- a/index.html
+++ b/index.html
@@ -73,12 +73,11 @@
           <a href="https://www.instagram.com/jaspergass?igsh=MTN6MmpweDMyMHR0Yg%3D%3D&utm_source=qr" target="_blank"><p>Instagram →</p></a>
         </div>
         <div class="section-right">
-          <p>I am a 4th year design student at the School of Interactive Art and Technology at SFU 
-            with an intense curiosity and passion for experience and analysis. As humans, experience 
-            is everything–it is our senses that allow us to find meaning in the world around us and 
-            understanding within ourselves. Even the smallest interactions we have can have lasting and 
-            meaningful impacts. As a designer, I hope to create beautiful interfaces and experiences that
-             people can find pleasure in, down to the smallest details, because it’s the little things that count.</p>
+          <p>In a digitally overwhelmed landscape, I find myself as a designer especially concerned with the quality 
+            of digital spaces and experiences of modern day life. In my practice, I want to emphasise intentionality, 
+            mindfulness, and seamlessness. I also want to explore the limits of our technology—push and play with its 
+            boundaries, create meaningful and unique experiences, and connect with others in the pursuit of a better internet. 
+            Every interaction counts.</p>
         </div>
         
       </section>
@@ -87,6 +86,61 @@
           <h2>Project Gallery</h2>
         </div> 
       </section>
+
+      <!-- This code is for a two colloumn gallery, but I didn't like that you could tell my images were different heights -->
+      <!-- <section>
+        <div class="two-img-box">
+          <div class="two-img">
+            <a class="no-underline" href="./html/arcanamini2.html"><h3>Arcana Mini 2</h3></a>
+            <a href="./html/arcanamini2.html"><img class="img-border" src="./img/arcana_mini_2/Header-1x.jpg" srcset="./img/arcana_mini_2/Header-2x.jpg x2, ./img/arcana_mini_2/Header-3x.png x3" alt="Preview of Arcana Mini 2 mobile app."></a>
+            <p>Fall 2023 - Spring 2024</p>
+            <p>Team project</p>
+            <h5>UI design, mobile app prototype, user experience</h5>
+          </div>
+          <div class="two-img">
+            <a class="no-underline" href="./html/DSBIA.html"><h3>Downtown Surrey BIA Co-op</h3></a>
+            <a href="./html/DSBIA.html"><img class="img-border" src="./img/DSBIA_img/DSBIAheader_1x.png" srcset="./img/DSBIA_img/DSBIAheader_2x.png 2x, ./img/DSBIA_img/DSBIAheader_3x.png 3x" alt="A header that shows the title of the page and a mosaic of some of the designs I made."></a>
+            <p>Summer 2024</p>
+            <p>Co-op</p>
+            <h5>Graphic design, web design</h5>
+          </div>
+        </div>
+
+        <div class="two-img-box">
+          <div class="two-img">
+            <a class="no-underline" href="./html/portfolio2.html"><h3>Portfolio 2</h3></a>
+            <a href="./html/portfolio2.html"><img src="./img/Portfolio2/Portfolio2Banner.png" alt="Preview of Portfolio 2 Website."></a>
+            <p>Summer 2023 - Present</p>
+            <p>Solo project</p>
+            <h5>UI design, website, visual identity, responsiveness</h5>
+          </div>
+          <div class="two-img">
+            <a class="no-underline" href="./html/waxdogonline.html"><h3>Wax Dog Sound Lab</h3></a>
+            <a href="./html/waxdogonline.html"><img src="./img/waxdog/waxdog-header.png" alt="Preview of Wax Dog Online website."></a>
+            <p>Spring 2024</p>
+            <p>Solo project</p>
+            <h5>UI design, client work, website, branding</h5>
+          </div>
+        </div>
+
+        <div class="two-img-box">
+          <div class="two-img">
+            <a class="no-underline" href="./html/arcanamini.html"><h3>Arcana Mini 1</h3></a>
+            <a href="./html/arcanamini.html"><img src="./img/arcana_mini/arcanamini_banner.png" alt="Preview of arcana mini mobile app project."></a>
+            <p>Spring 2023</p>
+            <p>Team project</p>
+            <h5>Mobile app, Android Studio, front end development</h5>
+          </div>
+          <div class="two-img">
+            <a class="no-underline" href="./html/mobileprototype.html"><h3>Adobook</h3></a>
+            <a href="./html/mobileprototype.html"><img src="./img/mobile_prototype/mobile-prototype.png" alt="Preview of a mobile recipe app."></a>
+            <p>Fall 2022</p>
+            <p>Team project</p>
+            <h5>UI design, mobile app prototype, accessibility, user testing</h5>
+          </div>
+        </div>
+      </section> -->
+
       <section>
         <div class="section-left">
           <a class="no-underline" href="./html/arcanamini2.html"><h3>Arcana Mini 2</h3></a>
