Resume link updated

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="expanded">
           <ul>
             <li><a href="./index.html">Home</a></li>
-            <li><a class="no-underline" href="https://drive.google.com/file/d/1Q3tl_DPJMUp9IAVywr466hvqr_uDoaDz/view?usp=sharing" target="_blank">Resume</a></li>
+            <li><a class="no-underline" href="https://drive.google.com/file/d/1MwRdmBRei2ALia3Za8JJOAxMeU9q_EWh/view?usp=sharing" target="_blank">Resume</a></li>
             <li><a class="no-underline" href="./html/archive.html">Archive</a></li>
           </ul>
         </div>
@@ -50,7 +50,7 @@
       <div id="menu-content" class="menu-content">
         <ul>
           <li><a href="./index.html">Home</a></li>
-          <li><a class="no-underline" href="https://drive.google.com/file/d/1Q3tl_DPJMUp9IAVywr466hvqr_uDoaDz/view?usp=sharing" target="_blank">Resume</a></li>
+          <li><a class="no-underline" href="https://drive.google.com/file/d/1MwRdmBRei2ALia3Za8JJOAxMeU9q_EWh/view?usp=sharing" target="_blank">Resume</a></li>
           <li><a class="no-underline" href="./html/archive.html">Archive</a></li>
         </ul>
       </div>
@@ -69,15 +69,14 @@
         <div class="section-left">
           <a href="mailto:jaspergass@outlook.com"><p>jaspergass@outlook.com →</p></a>
           <a href="https://www.linkedin.com/in/jasper-gass-130624223" target="_blank"><p>LinkedIn →</p></a>
-          <a href="https://drive.google.com/file/d/1Q3tl_DPJMUp9IAVywr466hvqr_uDoaDz/view?usp=sharing" target="_blank"><p>Resume →</p></a>
+          <a href="https://drive.google.com/file/d/1MwRdmBRei2ALia3Za8JJOAxMeU9q_EWh/view?usp=sharing" target="_blank"><p>Resume →</p></a>
           <a href="https://www.instagram.com/jaspergass?igsh=MTN6MmpweDMyMHR0Yg%3D%3D&utm_source=qr" target="_blank"><p>Instagram →</p></a>
         </div>
         <div class="section-right">
-          <p>In a digitally overwhelmed landscape, I find myself as a designer especially concerned with the quality 
-            of digital spaces and experiences of modern day life. In my practice, I want to emphasise intentionality, 
-            mindfulness, and seamlessness. I also want to explore the limits of our technology—push and play with its 
-            boundaries, create meaningful and unique experiences, and connect with others in the pursuit of a better internet. 
-            Every interaction counts.</p>
+          <p>In my design practice, I aim to create intentionally. To me, intentionality is about asking good questions, 
+            attention to detail, and flexibility. Its about being curious, and continuously learning and experimenting in 
+            pursuit of growth. I believe that designing with intention is essential to maintaining a healthy digital landscape,
+             one that is curated and meaningful. </p>
         </div>
         
       </section>
