--- a/html/TomatoScout.html
+++ b/html/TomatoScout.html
@@ -29,7 +29,7 @@
         <div class="expanded">
           <ul>
             <li><a class="no-underline" href="../index.html">Home</a></li>
-            <li><a class="no-underline" href="https://drive.google.com/file/d/1MwRdmBRei2ALia3Za8JJOAxMeU9q_EWh/view?usp=sharing" target="_blank">Resume</a></li>
+            <li><a class="no-underline" href="https://drive.google.com/file/d/1lTLqae7foL8u88s1wUCjLIbWWAvpHLKo/view?usp=sharingg" target="_blank">Resume</a></li>
             <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
           </ul>
         </div>
@@ -47,7 +47,7 @@
       <div id="menu-content" class="menu-content">
         <ul>
           <li><a class="no-underline" href="../index.html">Home</a></li>
-          <li><a class="no-underline" href="https://drive.google.com/file/d/1MwRdmBRei2ALia3Za8JJOAxMeU9q_EWh/view?usp=sharing" target="_blank">Resume</a></li>
+          <li><a class="no-underline" href="https://drive.google.com/file/d/1lTLqae7foL8u88s1wUCjLIbWWAvpHLKo/view?usp=sharing" target="_blank">Resume</a></li>
           <li><a class="no-underline" href="../html/archive.html">Archive</a></li>
         </ul>
       </div>
