--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="expanded">
           <ul>
             <li><a href="./index.html">Home</a></li>
-            <li><a class="no-underline" href="https://drive.google.com/file/d/1MwRdmBRei2ALia3Za8JJOAxMeU9q_EWh/view?usp=sharing" target="_blank">Resume</a></li>
+            <li><a class="no-underline" href="https://drive.google.com/file/d/1lTLqae7foL8u88s1wUCjLIbWWAvpHLKo/view?usp=sharing" target="_blank">Resume</a></li>
             <li><a class="no-underline" href="./html/archive.html">Archive</a></li>
           </ul>
         </div>
@@ -50,14 +50,14 @@
       <div id="menu-content" class="menu-content">
         <ul>
           <li><a href="./index.html">Home</a></li>
-          <li><a class="no-underline" href="https://drive.google.com/file/d/1MwRdmBRei2ALia3Za8JJOAxMeU9q_EWh/view?usp=sharing" target="_blank">Resume</a></li>
+          <li><a class="no-underline" href="https://drive.google.com/file/d/1lTLqae7foL8u88s1wUCjLIbWWAvpHLKo/view?usp=sharing" target="_blank">Resume</a></li>
           <li><a class="no-underline" href="./html/archive.html">Archive</a></li>
         </ul>
       </div>
         
         <div id="header-title" class="header-title">
           <h1>Jasper Gass</h1>
-          <h3>Interface Designer and Web Developer</h3>
+          <h3>Digital Product Design and Development</h3>
         </div>
 
       <section id="title">
@@ -69,7 +69,7 @@
         <div class="section-left">
           <a href="mailto:jaspergass@outlook.com"><p>jaspergass@outlook.com →</p></a>
           <a href="https://www.linkedin.com/in/jasper-gass-130624223" target="_blank"><p>LinkedIn →</p></a>
-          <a href="https://drive.google.com/file/d/1MwRdmBRei2ALia3Za8JJOAxMeU9q_EWh/view?usp=sharing" target="_blank"><p>Resume →</p></a>
+          <a href="https://drive.google.com/file/d/1lTLqae7foL8u88s1wUCjLIbWWAvpHLKo/view?usp=sharing" target="_blank"><p>Resume →</p></a>
           <a href="https://www.instagram.com/jaspergass?igsh=MTN6MmpweDMyMHR0Yg%3D%3D&utm_source=qr" target="_blank"><p>Instagram →</p></a>
         </div>
         <div class="section-right">
